[package]
name = "hd-wallet-wasm-test"
version = "0.1.0"
edition = "2021"
description = "Test suite for hd-wallet-wasm WASI module"
authors = ["HD Wallet Team"]
license = "MIT"

[lib]
name = "hd_wallet_wasm_test"
path = "src/lib.rs"

[dependencies]
wasmtime = "27"
wasmtime-wasi = "27"
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
rand = "0.8"
